--- a/WCP/Home/View/Index/Display/main.html
+++ b/WCP/Home/View/Index/Display/main.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>WCPcms微信公众平台管理系统</title>
+    <script src="__Ext__/JQuery/jquery-2.2.0.min.js"></script>
+    <script src="__Ext__/Highcharts/js/highcharts.js"></script>
 </head>
 <body>
     <h1>网站主界面</h1>
