添加highcharts高级功能js文件支持[C

--- a/WCP/Home/View/Index/Display/main.html
+++ b/WCP/Home/View/Index/Display/main.html
@@ -5,6 +5,8 @@
     <title>WCPcms微信公众平台管理系统</title>
     <script src="__Ext__/JQuery/jquery-2.2.0.min.js"></script>
     <script src="__Ext__/Highcharts/js/highcharts.js"></script>
+    <script src="__Ext__/Highcharts/js/modules/exporting.js"></script>
+    <script src="__Ext__/Highcharts/js/themes/gray.js"></script>
 </head>
 <body>
     <h1>网站主界面</h1>
