--- a/WCP/Home/View/Index/Display/main.html
+++ b/WCP/Home/View/Index/Display/main.html
@@ -8,44 +8,227 @@
     <script src="__Ext__/Highcharts/js/modules/exporting.js"></script>
     <script src="__Ext__/Highcharts/js/modules/data.js"></script>
     <script src="__Ext__/Highcharts/js/themes/skies.js"></script>
-    <script>
+    <script language="JavaScript">
+        $(document).ready(function() {
+            //$('#container').highcharts(highcharts_options);
+            var title = {
+                text: '月平均气温'
+            };
+            var subtitle = {
+                text: 'Source: runoob.com'
+            };
+            var xAxis = {
+                title: {
+                    text: '月份'
+                },
+                categories: ['一月', '二月', '三月', '四月', '五月', '六月'
+                    ,'七月', '八月', '九月', '十月', '十一月', '十二月']
+            };
+            var yAxis = {
+                title: {
+                    text: 'Temperature (\xB0C)'
+                },
+                plotLines: [{
+                    value: 0,
+                    width: 1,
+                    color: '#808080'
+                }]
+            };
+
+            var tooltip = {
+                valueSuffix: '\xB0C'
+            };
+
+            var legend = {
+                layout: 'vertical',
+                align: 'right',
+                verticalAlign: 'middle',
+                borderWidth: 0
+            };
+
+            var series =  [
+                {
+                    name: 'Tokyo',
+                    data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2,
+                        26.5, 23.3, 18.3, 13.9, 9.6]
+                },
+                {
+                    name: 'New York',
+                    data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8,
+                        24.1, 20.1, 14.1, 8.6, 2.5]
+                },
+                {
+                    name: 'Berlin',
+                    data: [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6,
+                        17.9, 14.3, 9.0, 3.9, 1.0]
+                },
+                {
+                    name: 'London',
+                    data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0,
+                        16.6, 14.2, 10.3, 6.6, 4.8]
+                }
+            ];
+
+            var json = {};
+
+            json.title = title;
+            json.subtitle = subtitle;
+            json.xAxis = xAxis;
+            json.yAxis = yAxis;
+            json.tooltip = tooltip;
+            json.legend = legend;
+            json.series = series;
+
+            $('#container').highcharts(json);
+
+        });
+        var highcharts_options = {
+            chart: {
+                type: 'column',
+                style : {
+                    //fontFamily:"",
+                    fontSize:'16px',
+                    fontWeight:'bold',
+                    color:'#006cee'
+                }
+            },
+            title: {
+                text: 'My first Highcharts chart'
+            },
+            subtitle: {
+                text: '我是副标题'
+            },
+            xAxis: {
+                title:{
+                    text:'x轴标题'
+                },
+                categories: ['my', 'first', 'chart']
+            },
+            yAxis: {
+                title: {
+                    text: 'y轴标题'
+                }
+            },
+            series: [{
+                name: 'Jane',
+                data: [1, 0, 4]
+            }, {
+                name: 'John',
+                data: [5, 7, 3]
+            }]
+        };
+    </script>
+
+    <script language="JavaScript">
+        //定义一个全局图表变量
+        var chart;
         $(function () {
-            $('#container').highcharts({
-                chart: {
-                    type: 'column',
-                    style : {
-                        //fontFamily:"",
-                        fontSize:'16px',
-                        fontWeight:'bold',
-                        color:'#006cee'
+            $(document).ready(function () {
+                chart = new Highcharts.Chart({
+                    chart: {
+                        renderTo: 'container'
+                    },
+                    title: {
+                        text: '关于动态添加添加Y轴和series数据的示例呈现'
+                    },
+                    subtitle: {
+                        text: 'From: www.stepday.com'
+                    },
+                    xAxis: [{
+                        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
+                            'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+                    }],
+                    yAxis: [{
+                        gridLineWidth: 0,
+                        title: {
+                            text: 'Rainfall',
+                            style: {
+                                color: '#4572A7'
+                            }
+                        },
+                        labels: {
+                            formatter: function () {
+                                return this.value + ' mm';
+                            },
+                            style: {
+                                color: '#4572A7'
+                            }
+                        }
+                    }],
+                    tooltip: {
+                        formatter: function () {
+                            var unit = {
+                                'Rainfall': 'mm',
+                                'Temperature': '°C',
+                                'Sea-Level Pressure': 'mb'
+                            }[this.series.name];
+
+                            return '' +
+                                    this.x + ': ' + this.y + ' ' + unit;
+                        }
+                    },
+                    legend: {
+                        layout: 'vertical',
+                        align: 'left',
+                        x: 120,
+                        verticalAlign: 'top',
+                        y: 80,
+                        floating: true,
+                        backgroundColor: '#FFFFFF'
+                    },
+                    credits: {
+                        text: "www.stepday.com",
+                        href: "http://www.stepday.com",
+                        style: {
+                            color:"red"
+                        }
+                    },
+                    series: [{
+                        name: 'Rainfall',
+                        color: '#89A54E',
+                        type: 'spline',
+                        data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+                    }]
+                });
+            });
+        });
+        ///动态添加图表X或者Y轴
+        function AddYaxis() {
+            var yAxisLength = chart.yAxis.length;
+            //第一个参数表示相关轴的配置参数
+            //第二个参数表示是否为xAxis
+            //第三个参数表示是否redraw
+            //第四个参数表示是否显示动画效果
+            chart.addAxis({
+                labels: {
+                    formatter: function () {
+                        return this.value + '°C';
+                    },
+                    style: {
+                        color: '#89A54E'
                     }
                 },
                 title: {
-                    text: 'My first Highcharts chart'
+                    text: 'Temperature' + yAxisLength
                 },
-                subtitle: {
-                    text: '我是副标题'
-                },
-                xAxis: {
-                    title:{
-                        text:'x轴标题'
-                    },
-                    categories: ['my', 'first', 'chart']
-                },
-                yAxis: {
-                    title: {
-                        text: 'y轴标题'
-                    }
-                },
-                series: [{
-                    name: 'Jane',
-                    data: [1, 0, 4]
-                }, {
-                    name: 'John',
-                    data: [5, 7, 3]
-                }]
-            });
-        });
+                opposite: true//坐标轴显示在右侧
+            }, false, true, true)
+        }
+        //动态添加序列数据
+        function AddSeriesData() {
+            //添加序列数据属于某个yAxis的时候最好提前判断是否已经有第二个Y轴 如果没有则不执行addSeries()操作
+            var yAxisLength = chart.yAxis.length;
+            if (yAxisLength > 1) {
+                chart.addSeries({
+                    name: 'Temperature' + yAxisLength,
+                    type: 'spline',
+                    yAxis: yAxisLength-1, //序列数据属于第几个Y轴
+                    data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
+                }, true, true);
+            } else {
+                alert("请天添加Y轴再执行序列数据的添加!");
+            }
+        }
     </script>
 </head>
 <body>
