修改首页展示路径&封面页添加配置项

--- a/WCP/Home/View/Index/Display/cover.html
+++ b/WCP/Home/View/Index/Display/cover.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="{$description}">
+    <meta name="author" content="{$author}">
 
     <title>Cover Template for Bootstrap</title>
 
@@ -49,6 +49,7 @@
 
                 <div class="mastfoot">
                     <div class="inner">
+                        <p>WCPcms微信公众平台管理系统<a href="https://github.com/helencoder/WCPcms">项目地址</a>, by <a href="http://blog.csdn.net/helencoder">helencoder</a> </p>
                         <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
                     </div>
                 </div>
